// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/OtherPosts Both 1`] = `
<div
  className="css-1p5q5e5-MuiStack-root"
>
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-lxqxet-MuiTypography-root"
  >
    Looking for more?
  </p>
  <div
    className="css-jibmk2-MuiStack-root"
  >
    <div
      className="css-7aky53-MuiStack-root"
    >
      <div
        className="css-1q36rmd-MuiStack-root"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 17l-5-5m0 0l5-5m-5 5h12"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
        <p
          className="MuiTypography-root MuiTypography-body1 css-17l2ekb-MuiTypography-root"
        >
          Prev
        </p>
      </div>
      <div
        className="css-1okj3ks-MuiStack-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1v8iln7-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt="random alt text"
            className="MuiBox-root css-19ii73e"
            src="https://picsum.photos/1920/1080"
          />
        </a>
        <a
          className="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-s7pgp9-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          Libero est voluptatem eligendi voluptatibus a et.
        </a>
      </div>
    </div>
    <div
      className="MuiBox-root css-0"
    />
    <div
      className="css-1xxtr8r-MuiStack-root"
    >
      <div
        className="css-1q36rmd-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-17l2ekb-MuiTypography-root"
        >
          Next
        </p>
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 7l5 5m0 0l-5 5m5-5H6"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
      <div
        className="css-1okj3ks-MuiStack-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1v8iln7-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt="random alt text"
            className="MuiBox-root css-19ii73e"
            src="https://picsum.photos/1920/1080"
          />
        </a>
        <a
          className="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-s7pgp9-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          Libero est voluptatem eligendi voluptatibus a et.
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/OtherPosts Neither 1`] = `null`;

exports[`Storyshots Components/OtherPosts Next Only 1`] = `
<div
  className="css-1p5q5e5-MuiStack-root"
>
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-lxqxet-MuiTypography-root"
  >
    Looking for more?
  </p>
  <div
    className="css-jibmk2-MuiStack-root"
  >
    <div
      className="MuiBox-root css-0"
    />
    <div
      className="css-1xxtr8r-MuiStack-root"
    >
      <div
        className="css-1q36rmd-MuiStack-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-17l2ekb-MuiTypography-root"
        >
          Next
        </p>
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 7l5 5m0 0l-5 5m5-5H6"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
      <div
        className="css-1okj3ks-MuiStack-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1v8iln7-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt="random alt text"
            className="MuiBox-root css-19ii73e"
            src="https://picsum.photos/1920/1080"
          />
        </a>
        <a
          className="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-s7pgp9-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          Libero est voluptatem eligendi voluptatibus a et.
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/OtherPosts Previous Only 1`] = `
<div
  className="css-1p5q5e5-MuiStack-root"
>
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-lxqxet-MuiTypography-root"
  >
    Looking for more?
  </p>
  <div
    className="css-jibmk2-MuiStack-root"
  >
    <div
      className="css-7aky53-MuiStack-root"
    >
      <div
        className="css-1q36rmd-MuiStack-root"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 17l-5-5m0 0l5-5m-5 5h12"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
        <p
          className="MuiTypography-root MuiTypography-body1 css-17l2ekb-MuiTypography-root"
        >
          Prev
        </p>
      </div>
      <div
        className="css-1okj3ks-MuiStack-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1v8iln7-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          <img
            alt="random alt text"
            className="MuiBox-root css-19ii73e"
            src="https://picsum.photos/1920/1080"
          />
        </a>
        <a
          className="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-s7pgp9-MuiTypography-root-MuiLink-root"
          href="/blog/post/vel-aut-sit"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
        >
          Libero est voluptatem eligendi voluptatibus a et.
        </a>
      </div>
    </div>
    <div
      className="MuiBox-root css-0"
    />
  </div>
</div>
`;
